# pyjelly

./: .gitmodules  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  codecov.yml  conftest.py  docker-compose.yml  jelly-inspect.py  mkdocs.yml  mypyc_test.py  pyproject.toml  pytest.ini  setup.py  setup_mypyc.py  test.nt  versions.json
.github/: dependabot.yml
.github/workflows/: _build-wheels.yml  ci.yml  e2e.yml  news.yml  quality.yml  release.yml  requirements-builder.txt
0.1.0/: 404.html
0.1.0/overrides/: main.html
0.1.x/: 404.html  index.html  objects.inv  sitemap.xml
0.1.x/api/: index.html
0.1.x/contributing/: index.html
0.1.x/getting-started/: index.html
0.1.x/overview/: index.html
0.1.x/search/: search_index.json
0.2.0/: index.html
0.2.0/api/: index.html
0.2.0/changelog/: index.html
0.2.0/overrides/: outdated.html
0.2.0/overview/: index.html
0.2.2/examples/: index.html
0.2.3/: 404.html
0.2.3/contributing/: index.html
0.2.3/getting-started/: index.html
0.2.3/overrides/: main.html
0.2.x/: 404.html  index.html  objects.inv  sitemap.xml
0.2.x/api/: index.html
0.2.x/changelog/: index.html
0.2.x/contributing/: index.html
0.2.x/examples/: index.html
0.2.x/getting-started/: index.html
0.2.x/overview/: index.html
0.2.x/search/: search_index.json
0.3.0/: 404.html  index.html
0.3.0/api/: index.html
0.3.0/contributing/: index.html
0.3.0/examples/: index.html
0.3.0/getting-started/: index.html
0.3.0/overrides/: main.html  outdated.html
0.3.0/overview/: index.html
0.3.x/: 404.html  index.html  objects.inv  sitemap.xml
0.3.x/api/: index.html
0.3.x/contributing/: index.html
0.3.x/examples/: index.html
0.3.x/getting-started/: index.html
0.3.x/overview/: index.html
0.3.x/search/: search_index.json
0.4.0/: 404.html  index.html
0.4.0/api/: index.html
0.4.0/contributing/: index.html
0.4.0/examples/: index.html
0.4.0/getting-started/: index.html
0.4.0/overrides/: main.html  outdated.html
0.4.0/overview/: index.html
0.4.x/: 404.html  index.html  objects.inv  sitemap.xml
0.4.x/api/: index.html
0.4.x/contributing/: index.html
0.4.x/examples/: index.html
0.4.x/getting-started/: index.html
0.4.x/overview/: index.html
0.4.x/search/: search_index.json
0.5.0/: 404.html
0.5.0/api/: index.html
0.5.0/contributing/: index.html
0.5.0/overrides/: main.html
0.5.1/: index.html
0.5.1/examples/: index.html
0.5.1/getting-started/: index.html
0.5.1/overview/: index.html
0.5.2/overrides/: outdated.html
0.5.3/generic-sink/: index.html
0.5.3/networkx-integration/: index.html
0.5.3/rdflib-neo4j-integration/: index.html
0.5.x/: 404.html  index.html  objects.inv  sitemap.xml
0.5.x/api/: index.html
0.5.x/contributing/: index.html
0.5.x/examples/: index.html
0.5.x/external-integration/: index.html
0.5.x/generic-sink/: index.html
0.5.x/getting-started/: index.html
0.5.x/networkx-integration/: index.html
0.5.x/overview/: index.html
0.5.x/rdflib-neo4j-integration/: index.html
0.5.x/search/: search_index.json
0.6.0/api/: index.html
0.6.0/examples/: index.html
0.6.0/networkx-integration/: index.html
0.6.0/overrides/: main.html  outdated.html
0.6.1/: 404.html
0.6.1/getting-started/: index.html
0.6.2/: index.html
0.6.x/: 404.html  index.html  sitemap.xml
0.7.0/: 404.html  index.html
0.7.x/: 404.html  index.html  objects.inv  sitemap.xml
benchmarks/: conftest.py  test_genetic_bench.py  test_rdflib_bench.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
docs/: basic-usage.md  compatibility.md  conformance.md  contributing.md  env.py  external-integration.md  generic-sink.md  getting-started.md  image_wrapper.md  index.md  licensing.md  networkx-integration.md  overview.md  rdflib-neo4j-integration.md
news/: 120.added.md  127.fixed.md  129.changed.md
notes-to-self/: jvm-lookup.py
output/: output.ttl
pyjelly/: __init__.py  __main__.py  _proto  _protocol  compare_nt.py  consumers.py  contexts.py  encoder.py  errors.py  lookup.py  main.py  options.py  producers.py  rdf.py  rdf_pb2.py  read_rdf.py  stax.py  stream.py  terms.py  write_rdf.py  writers.py
scripts/: compile-pb2  compile-proto  pull-dev-cli  sample-tests
stable/: index.html
test_files/: rdf_star_triple.ttl
tests/: cli.py  conftest.py  meta.py  parse.py  serialize.py
wheelhouse/: pyjelly-0.0.0-cp313-cp313-win_amd64.whl  pyjelly-0.0.0-cp39-cp39-win_amd64.whl  pyjelly-0.0.0-py3-none-any.whl
z/: jelly-jvm.jelly  txt-jvm.txt
(+258 files in other folders)
